Fixing margins for all images on mobile in tcingc page

--- a/css/tcingc.css
+++ b/css/tcingc.css
@@ -108,10 +108,6 @@ hr {
 	padding-right: 5px;	
 }
 
-.bot-images {
-	margin-top: 10px;
-}
-
 .middle-images {
 	margin-bottom: 20px;
 }
@@ -140,6 +136,7 @@ hr {
     #nav-container #name {font-size: 1.75em;}
 	#proj-name {font-size: 2.0em;}
 	#to-top #right-hr hr {margin-top: 20px;}
+	.left-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
 }
 
@@ -148,6 +145,7 @@ hr {
     #nav-container #name {font-size: 1.75em;}
     #proj-name {font-size: 2.85em;}
 	#to-top #right-hr hr {margin-top: 20px;}
+	.left-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
 }
 
@@ -160,4 +158,5 @@ hr {
 	#to-top #right-hr hr {margin-top: 30px;}
 	.left-images {padding-right: 5px;}
 	.right-images {padding-left: 5px;}
+	.bot-images {margin-top: 10px;}
 }
